--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,49 +1,63 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Shopping List Page</h1>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightblue; color: black;">
+        <div class="container-fluid">
+            <span class="Navbar-brand text-center mx-auto"> 
+                <h1>Shopping List Page</h1>                
+                <H2>M Pendar Bintang K {{class}}</H2>
+            </span>
+            <a href="{% url 'main:logout' %}" class="btn btn-danger ml-auto">Logout</a>
+            
+        </div>
+    </nav>
 
-    <h5>Name:</h5>
-    <p>{{name}}</p>
-
-    <h5>Class:</h5>
-    <p>{{class}}</p>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Date Added</th>
-        </tr>
+    <h3> Welcome {{ name }} </h3>
     
-        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-    
+    <table class="table table-bordered" border="5">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Description</th>
+                <th>Date Added</th>
+                <th>Edit Item</th>
+                <th>Remove Item</th> 
+            </tr>
+        </thead>
+        <tbody>
         {% for product in products %}
             <tr>
                 <td>{{product.name}}</td>
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}">
+                        <button class="btn btn-primary">
+                            Edit
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a href="{% url 'main:delete_product' product.pk %}">
+                        <button class="btn btn-danger">
+                            Delete
+                        </button>
+                </td>
             </tr>
         {% endfor %}
+        </tbody>
     </table>
         
     <br />
     
-    <h5>Sesi terakhir login: {{ last_login }}<</h5>
+    <h5>Sesi terakhir login: {{ last_login }} </h5>
 
     <a href="{% url 'main:create_product' %}">
         <button>
             Add New Product
         </button>
     </a>
-    
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
-
-    
 {% endblock content %}
 
